--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,8 @@ height: 60px;
     text-transform: uppercase;
 }
 .hero h1{
-position: relative left: -30px;
+position: relative; 
+left: -30px;
 
 }
 .hero h2{
